--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
+  "homepage": "https://github.com/brijkishor11/react_production.git",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
